[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scene/PlayerCharacter.gd" type="Script" id=1]
[ext_resource path="res://Scene/Calzone.tscn" type="PackedScene" id=2]
[ext_resource path="res://chonker.png" type="Texture" id=3]
[ext_resource path="res://wheel.png" type="Texture" id=4]
[ext_resource path="res://Scene/ScreenShake.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scene/UI Layer.tscn" type="PackedScene" id=6]

[sub_resource type="CapsuleShape2D" id=1]

custom_solver_bias = 0.0
radius = 44.6761
height = 28.628

[node name="PlayerCharacter" type="RigidBody2D"]

position = Vector2( 184, 456 )
input_pickable = false
collision_layer = 1025
collision_mask = 1025
mode = 2
mass = 1.0
friction = 0.5
bounce = 0.4
gravity_scale = 3.0
custom_integrator = false
continuous_cd = 0
contacts_reported = 0
contact_monitor = false
sleeping = false
can_sleep = true
linear_velocity = Vector2( 0, 0 )
linear_damp = -1.0
angular_velocity = 0.0
angular_damp = -1.0
script = ExtResource( 1 )
_sections_unfolded = [ "Collision", "Transform" ]
thrustForce = 400

[node name="Calzone" parent="." index="0" instance=ExtResource( 2 )]

position = Vector2( 0, -96 )

[node name="Calzone2" parent="." index="1" instance=ExtResource( 2 )]

position = Vector2( 0, -128 )

[node name="Calzone3" parent="." index="2" instance=ExtResource( 2 )]

position = Vector2( 0, -160 )

[node name="Calzone4" parent="." index="3" instance=ExtResource( 2 )]

position = Vector2( 0, -192 )

[node name="Calzone5" parent="." index="4" instance=ExtResource( 2 )]

position = Vector2( 0, -224 )

[node name="Sprite" type="Sprite" parent="." index="5"]

position = Vector2( 10, -41.8825 )
scale = Vector2( 0.2125, 0.2125 )
texture = ExtResource( 3 )
_sections_unfolded = [ "Animation", "Offset", "Region", "Transform" ]

[node name="Sprite2" type="Sprite" parent="Sprite" index="0"]

position = Vector2( 169.412, 310.035 )
scale = Vector2( 0.732302, 0.732302 )
texture = ExtResource( 4 )

[node name="Sprite3" type="Sprite" parent="Sprite" index="1"]

position = Vector2( -348.235, 310.035 )
scale = Vector2( 0.732302, 0.732302 )
texture = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="6"]

position = Vector2( -1.90735e-006, -19.6923 )
rotation = 1.57226
shape = SubResource( 1 )
_sections_unfolded = [ "Transform" ]

[node name="RayCast2D2" type="RayCast2D" parent="." index="7"]

position = Vector2( -47, -6.19888e-006 )
enabled = false
exclude_parent = true
cast_to = Vector2( 0, 50 )
collision_mask = 1

[node name="RayCast2D4" type="RayCast2D" parent="." index="8"]

position = Vector2( -62, -4.00002 )
scale = Vector2( 1, 0.875 )
enabled = false
exclude_parent = true
cast_to = Vector2( 0, 50 )
collision_mask = 1

[node name="RayCast2D5" type="RayCast2D" parent="." index="9"]

position = Vector2( 61, -4.00002 )
scale = Vector2( 1, 0.875 )
enabled = false
exclude_parent = true
cast_to = Vector2( 0, 50 )
collision_mask = 1

[node name="RayCast2D6" type="RayCast2D" parent="." index="10"]

position = Vector2( -34, -17 )
rotation = 1.5708
scale = Vector2( 1, 0.75 )
enabled = false
exclude_parent = true
cast_to = Vector2( 0, 50 )
collision_mask = 1
_sections_unfolded = [ "Transform" ]

[node name="RayCast2D7" type="RayCast2D" parent="." index="11"]

position = Vector2( 35, -17 )
rotation = -1.5708
scale = Vector2( 1, 0.75 )
enabled = false
exclude_parent = true
cast_to = Vector2( 0, 50 )
collision_mask = 1
_sections_unfolded = [ "Transform" ]

[node name="RayCast2D3" type="RayCast2D" parent="." index="12"]

position = Vector2( 46, -6.19888e-006 )
enabled = false
exclude_parent = true
cast_to = Vector2( 0, 50 )
collision_mask = 1

[node name="RayCast2D" type="RayCast2D" parent="." index="13"]

position = Vector2( 0, -6.19888e-006 )
enabled = true
exclude_parent = true
cast_to = Vector2( 0, 50 )
collision_mask = 1
_sections_unfolded = [ "Transform" ]

[node name="Camera2D" type="Camera2D" parent="." index="14"]

position = Vector2( 6, -203 )
anchor_mode = 1
rotating = false
current = true
zoom = Vector2( 1.5, 1.5 )
limit_left = -10000000
limit_top = -10000000
limit_right = 10000000
limit_bottom = 10000000
limit_smoothed = false
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = true
smoothing_speed = 5.0
offset_v = 0.0
offset_h = 0.0
drag_margin_left = 0.1
drag_margin_top = 0.1
drag_margin_right = 0.1
drag_margin_bottom = 0.1
editor_draw_screen = true
editor_draw_limits = true
editor_draw_drag_margin = true
_sections_unfolded = [ "Drag Margin", "Editor", "Limit", "Offset", "Smoothing", "Transform" ]

[node name="ScreenShake" parent="Camera2D" index="0" instance=ExtResource( 5 )]

pause_mode = 2
_sections_unfolded = [ "Pause" ]

[node name="Timer" type="Timer" parent="." index="15"]

process_mode = 1
wait_time = 0.5
one_shot = false
autostart = true

[node name="UI Layer" parent="." index="16" instance=ExtResource( 6 )]

[node name="JumpTimer" type="Timer" parent="." index="17"]

process_mode = 1
wait_time = 0.3
one_shot = true
autostart = true

[connection signal="explodeSignal" from="Calzone" to="Camera2D/ScreenShake" method="_on_Calzone_explodeSignal"]

[connection signal="explodeSignal" from="Calzone2" to="Camera2D/ScreenShake" method="_on_Calzone2_explodeSignal"]

[connection signal="explodeSignal" from="Calzone3" to="Camera2D/ScreenShake" method="_on_Calzone3_explodeSignal"]

[connection signal="explodeSignal" from="Calzone4" to="Camera2D/ScreenShake" method="_on_Calzone4_explodeSignal"]

[connection signal="explodeSignal" from="Calzone5" to="Camera2D/ScreenShake" method="_on_Calzone5_explodeSignal"]

[connection signal="timeout" from="JumpTimer" to="." method="_on_JumpTimer_timeout"]


